# dashboard_sonar

./: README.md  config.py  pyproject.toml  run.py  setup.cfg
apps/: __init__.py  errorhandlers.py
apps/api/: __init__.py  routes.py
apps/auth/: __init__.py  forms.py  routes.py
apps/bbdd/: sonar.py
apps/home/: __init__.py  routes.py
apps/static/assets/demo/: api.js  chart-area-midemo.js  chart-bar-bugs.js  chart-bar-codesmells.js  chart-bar-demo.js  chart-bar-index.js  chart-bar-midemo.js  chart-bar-midemo2.js  chart-bar-midemo3.js  chart-bar-vulnerabilities.js  chart-pie-demo.js
apps/static/css/: styles.css  table.css
apps/templates/auth/: login.html  login3.html  password.html  register.html
apps/templates/home/: 401.html  404.html  500.html  index.html  layout-sidenav-light.html  layout-static.html
apps/templates/home/charts/: charts.html  charts_historico.html  charts_test.html
apps/templates/home/kpis/: kpis_historico.html  kpis_proveedores.html
apps/templates/home/metricas/: historico.html  metricas.html  proveedores.html
apps/templates/home/stats/: stats.html  stats_proveedores.html
apps/templates/includes/: incl_charts.html  incl_charts2.html  incl_footer.html  incl_layoutSidenav_nav.html  incl_layoutSidenav_nav.html.bak  incl_layoutSidenav_nav_light.html  incl_navbar.html  incl_table copy.html  incl_table.html  incl_table_kpis.html  incl_table_stats.html
apps/templates/layouts/: base-fullscreen.html  base.html
tests/: conftest.py  test_api.py  test_auth.py  test_home.py
